--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
+    "epa": "^0.2.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
